# rust-embedded-intro

./: Cargo.toml  Embed.toml  LICENSE  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: embassy.rs  rtt.rs
src/: main.rs
