[package]
name = "rust-embedded-intro"
version = "0.3.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.4"
panic-halt = "0.2.0"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtt-target = "0.5.0"
nrf5340-app-pac = "0.12"

defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = ["defmt", "task-arena-size-32768", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf5340-app-s", "time-driver-rtc1", "gpiote", "unstable-pac"] }
embassy-time = "0.3.0"
panic-probe = { version = "0.3.2", features = ["defmt", "print-defmt"] }
